--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "@astrojs/check": "^0.9.2",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.13.4",
+    "matter-js": "0.17.1",
     "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/matter-js": "^0.19.7"
   }
 }
